# yt-brain

./: .gitignore  README.md
swarm/: README.md  swarm_memory.md
watchlight/: index.html  install-shortcut.ps1  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
yt-ai/: pyproject.toml
yt-ai/src/yt_ai/: __init__.py  cli.py  router.py  server.py
yt-ai/tests/: test_router.py
yt-brain/: pyproject.toml
yt-brain-extension/: background.js  content.js  manifest.json  popup.html  popup.js
yt-brain-launcher/: README.md  install-shortcut.ps1  start.ps1  stop.ps1  tray.ps1  tray.vbs  (+3 more)
yt-brain/src/yt_brain/: __init__.py
yt-brain/src/yt_brain/agents/: __init__.py  audit.py  machine.py  runtime.py  web.py  web_payment_blocklist.py
yt-brain/src/yt_brain/api/: __init__.py  server.py
yt-brain/src/yt_brain/browser/: __init__.py  driver.py  harvesters.py  rate_limit.py
yt-brain/src/yt_brain/cli/: __init__.py  main.py
yt-brain/src/yt_brain/consent/: __init__.py  policy.py  predictor.py  windows.py
yt-brain/src/yt_brain/control/: __init__.py  dispatch.py  registry.py
yt-brain/src/yt_brain/enrichment/: __init__.py  chunker.py
yt-brain/src/yt_brain/extract/: __init__.py  extractor.py  schema.py
yt-brain/src/yt_brain/modes/: __init__.py  router.py
yt-brain/src/yt_brain/services/: __init__.py  notify.py  search.py  sync.py  thermal.py
yt-brain/src/yt_brain/sources/: __init__.py  models.py  takeout.py
yt-brain/src/yt_brain/storage/: __init__.py  db.py
yt-brain/tests/: test_agents_machine.py  test_agents_web.py  test_api_live_visit.py  test_browser_ratelimit.py  test_chunker.py  test_consent.py  test_control.py  test_db.py  test_extract.py  test_modes.py  test_sync_and_search.py  test_takeout.py
(+50 files in other folders)
