[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-ai"
version = "0.1.0"
description = "Local AI runtime — OpenAI-compatible router over Ollama/vLLM/llama.cpp + cloud fallback."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.8",
    "click>=8.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
yt-ai = "yt_ai.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_ai"]
