[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-brain"
version = "0.1.0"
description = "YouTube-native AI: ingest, index, interact, implement."
requires-python = ">=3.12"
dependencies = [
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
    "youtube-transcript-api>=0.6.2",
    "sqlite-utils>=3.37",
    "click>=8.1",
    "tenacity>=9.0",
    "pydantic>=2.8",
    "httpx>=0.27",
    "rich>=13.7",
    "numpy>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "vcrpy>=6.0",
    "ruff>=0.6",
]
embed = [
    "sentence-transformers>=3.0",
]
vector = [
    "chromadb>=0.5",
]
ml = [
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "umap-learn>=0.5.6",
]

[project.scripts]
yt-brain = "yt_brain.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
